--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url('http://fonts.googleapis.com/css?family=Lato:400,700');
+
 body {
-    font-family: 'Open Sans Condensed ';
-  }
+    font-family: 'Lato';
+    padding: 20px 60px;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
