--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,9 +1,9 @@
 .sign-in{
-    width: 30vw;
-    display: flex;
-    flex-direction: column;
-
     .title{
         margin: 10px 0px;
+    }
+    .buttons{
+        display: flex;
+        justify-content: space-between;
     }
 }
